# Smart_sity

./: .gitignore  README.md  pyproject.toml  requirements.txt
agents/every_5s_learning/: q_table_317267021.npy  q_table_318319948.npy  q_table_318319950.npy  q_table_344715428.npy  q_table_459095577.npy  q_table_459095593.npy  q_table_5672981203.npy  q_table_6734642660.npy  q_table_728359174.npy  q_table_931498932.npy  q_table_cluster_12485993451_12485993457_444743027_999091207.npy  q_table_cluster_12485993454_12485993455_12485993456_12485993458_#4more.npy  q_table_cluster_12497859354_12497859355.npy  q_table_cluster_1846673394_455570130.npy  q_table_cluster_1933957591_1944596256_1944596258_500010840.npy  q_table_cluster_286141464_317863064.npy  q_table_cluster_317864209_317864212.npy  q_table_cluster_318319949_3665705327.npy  q_table_cluster_444929591_444929853.npy  q_table_cluster_453491193_453491196.npy  q_table_joinedS_3056282982_cluster_500010834_500010835_500010836_500010837.npy  q_table_joinedS_4159783704_4159783713.npy
agents/first_learning/: q_table_317267021.npy  q_table_318319948.npy  q_table_318319950.npy  q_table_344715428.npy  q_table_459095577.npy  q_table_459095593.npy  q_table_5672981203.npy  q_table_6734642660.npy  q_table_728359174.npy  q_table_931498932.npy  q_table_cluster_12485993451_12485993457_444743027_999091207.npy  q_table_cluster_12497859354_12497859355.npy  (+10 more)
notebooks/: visualize_test_data.ipynb
scripts/: accident_bot.py  learn_agents.py  start_sim_gui.py  test_agents.py  test_learn_agents.py  test_without_agents.py
(+430 files in other folders)
