[project]
name = "sity-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "pandas>=2.3.2",
    "path>=17.1.1",
    "pathlib>=1.0.1",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
    "traci>=1.24.0",
]
